Blog n some minor changes

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
                 <figcaption>We look like this! (<a href="https://picrew.me/ja/image_maker/1944831" target="_blank">credit</a>)</figcaption>
             </figure>
             <p>Heya, hiya, how are ya? Name's devils (or Bruno, if you'd prefer an actual name)- 25 year-old <a href="https://morethanone.info/" target="_blank">system</a> from Portugal, they/them or he/him.</p>
+            <p>The ones maintaining this site (and additionally the only ones who care about using the Internet) are <strong>Alastor</strong> and <strong>Angel</strong>.</p>
             <p>Besides maintaining this site, we spend a considerable amount of time drawing, playing video games and <a href="https://www.moderneopets.com/userlookup/402" target="_blank">feeding our Neopets</a>.</p>
             <p>We're very opinionated, though typically open-minded and open to discussion. If you're confused or upset by something we've said, feel free to reach out! We love hearing others' viewpoints- as long as you also want a productive conversation, that is.</p>
             <p>We're also pretty left in the political spectrum (we're not educated enough on the topic to properly label ourselves as anything other than «leftist», though), and very firmly against art censorship and bigotry. Additionally, we're schizophrenic and that can affect the way we communicate with others (namely a lack of coherency and a tendency to isolate).</p>
