--- a/freebies.html
+++ b/freebies.html
@@ -21,6 +21,13 @@
             <h1>Free graphics</h1>
         </header>
         <article>
+            <!--TERMS-->
+            <h3>Terms of use</h3>
+            <ul>
+                <li>Credit with a link to this website (either the index or this specific page).</li>
+                <li>Credit must be visible and easily accessible or via the image.</li>
+                <li>We advise against hotlinking since we re-organize files often.</li>
+            </ul>
            <!--SOZAI-->
            <details>
                 <summary>Sozai & small pixels</summary>
