--- a/accessibility.html
+++ b/accessibility.html
@@ -43,8 +43,8 @@
         </header>
         <article>
             <!--INTRODUCTION & TABLE OF CONTENTS-->
-            <p>Whenever I browse personal websites, it's often I notice a lack of thought from their Webmasters when it comes to browsing the Web in a way different than their own.</p>
-            <p>Since I started creating websites, I ended up learning a lot about Web accessibility and why it matters. I very firmly believe that the indie Web shouldn't be gatekept from people who genuinely want to learn more about it, especially if it's over something they can't control.</p>
+            <p>Whenever we browse personal websites, it's often we notice a lack of thought from their Webmasters when it comes to browsing the Web in a way different than their own.</p>
+            <p>Since we started creating websites, I ended up learning a lot about Web accessibility and why it matters. We very firmly believe that the indie Web shouldn't be gatekept from people who genuinely want to learn more about it, especially if it's over something they can't control.</p>
             <p>So, here's a list of things you might want to upgrade or add to your site, with instructions on how to do them and why they're important.</p>
             <p>These are just suggestions. As you can probably tell, this site itself isn't mobile-friendly, which is an accessibility issue. At the end of the day, a Webmaster has to take these issues into consideration and arrive at a conclusion that allows for their creative vision to be fulfilled. It's all part of the problem-solving process of creating websites.</p>
             <h3>Table of contents</h3>
@@ -115,7 +115,7 @@
             <h2 id="links">Links must look like links</h2>
             <p>Links must look visually different from regular text, so people know what is and isn't a link.</p>
             <p>However, for truly accessible design, make sure they are distinct- we underline our links, for example. This is so people who are colorblind can also recognize what is and isn't a link. Making links different colors isn't always enough.</p>
-            <p>You could also get creative with it. A pal of mine, <a href="https://noombers.neocities.org/" target="_blank">numbers</a>, came up with a pretty neat and unique solution: using the CSS selector :after, they included an arrow after each link.</p>
+            <p>You could also get creative with it. A pal of ours, <a href="https://noombers.neocities.org/" target="_blank">numbers</a>, came up with a pretty neat and unique solution: using the CSS selector :after, they included an arrow after each link.</p>
             <pre>a:after {
     content: "↗";
 }</pre>
@@ -127,9 +127,9 @@
             <!--FONTS-->
             <h2 id="fonts">Fonts and readability</h2>
             <p>Fonts are obviously very important if you want to have text on a website. It's important to consider certain things when implementing font styling though.</p>
-            <p>Secondly, make sure the size isn't too small- 1em (which is the standard font size) is quite good, we recommend not going under .8rem as the text might be too small for users to read. Remember, just because you can read small text, that doesn't mean everyone can- even users that aren't visually impaired might have trouble reading tiny text.</p>
+            <p>Secondly, make sure the size isn't too small- 1em (which is the standard font size) is quite good, we recommend not going under .8em as the text might be too small for users to read. Remember, just because you can read small text, that doesn't mean everyone can- even users that aren't visually impaired might have trouble reading tiny text.</p>
             <p>Color is equally important. The colors must contrast against each other in a way that doesn't cause eye-strain. So, we recommend avoiding bright text on bright backgrounds, pastel text on pastel backgrounds, et cetera.</p>
-            <p>Finally, to make things easier for dyslexic users, there are many things you can change to make the text easier to read, such as word/letter spacing, avoiding justified text... This is covered in-depth by <a href="https://solaria.neocities.org/" target="_blank">solaria</a>'s' <a href="https://solaria.neocities.org/readability" target="_blank">readability guide</a>, I highly recommend checking it out!</p>
+            <p>Finally, to make things easier for dyslexic users, there are many things you can change to make the text easier to read, such as word/letter spacing, avoiding justified text... This is covered in-depth by <a href="https://solaria.neocities.org/" target="_blank">solaria</a>'s' <a href="https://solaria.neocities.org/readability" target="_blank">readability guide</a>, we highly recommend checking it out!</p>
             <!--EMOJIS-->
             <h2 id="emojis">Emojis</h2>
             <p>Emojis are a part of modern day-to-day Internet life, even being essential for certain memes. However, with more emojis being added regularly, it might take some time for all devices to catch up. As such, it might be a good idea to include a custom emoji set.</p>
@@ -171,7 +171,7 @@
             <p>Here's Youtube's first ever video (Me at the zoo), with a transcript below it:</p>
             <iframe width="100%" height="300px" src="https://www.youtube-nocookie.com/embed/jNQXAC9IVRw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <q>Jawed Karim: [to the camera] All right, so here we are in front of the, uh, elephants, and the cool thing about these guys is that, is that they have really, really, really long, um, trunks, and that's, that's cool, and that's pretty much all there is to say.</q>
-            <p>This transcript was copy-pasted from <a href="https://en.wikiquote.org/wiki/Me_at_the_zoo" target="_blank">Wikiquote</a>, as I could barely understand what the guy was saying myself. It's important to note that videos with proper captions in them don't require transcripts.</p>
+            <p>This transcript was copy-pasted from <a href="https://en.wikiquote.org/wiki/Me_at_the_zoo" target="_blank">Wikiquote</a>, as we could barely understand what the guy was saying myself. It's important to note that videos with proper captions in them don't require transcripts.</p>
             <p>Naturally, it takes a lot of work if the video is long. However, anything that is relevant to the overall point of the page should have transcripts- even if you leave some things out, such as the stutters or irrelevant jokes.</p>
             <!--IMAGE SIZE-->
             <h2 id="image-size">Compressing images</h2>
