--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     <li>Not mobile friendly.</li>
                 </ul>
             </details>
+            <p>Like the site? You can link back using this button! We advise against hotlinking as we re-organize files often.</p>
+            <center>
+                <img src="/images/link-buttons/yourdevilfriends.png" alt="yourdevilfriends.art button">
+            </center>
         </article>
     </main>
     <!--WEBRINGS-->
@@ -57,6 +61,13 @@
         </div>
         <!--BAYANET-->
         <a href="https://ochame.neocities.org/bayanet"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" id="bayanet"></a>          
+        <!--PALS-->
+        <h3>Friends of the site</h3>
+        <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/link-buttons/mortalsins.png" alt="mortalsins.neocities.org"></a>
+        <a href="https://ochame.neocities.org/" target="_blank"><img src="/images/link-buttons/ochame.gif" alt="ochame.neocities.org"></a>
+        <br>
+        <a href="https://dokode.moe/" target="_blank"><img src="/images/link-buttons/dokodemo.gif" alt="dokode.moe"></a>
+        <a href="https://feelingmachine.moe/" target="_blank"><img src="/images/link-buttons/feelingmachine.gif" alt="feelingmachine.moe"></a>
     </aside>
 </body>
 </html>
