--- a/updates.html
+++ b/updates.html
@@ -25,8 +25,9 @@
             <details>
                 <summary>June 2023</summary>
                 <ul>
-                    <li>7th: Re-instated art gallery; New badge on the about page</li>
-                    <li>6th: Created new layout; Re-instated Web accessibility guide, free graphics, scans and about;</li>
+                    <li>8th: Added friends' buttons to index page; Created blog; Added terms of use to freebies page; Minor changes to accessibility guide.</li>
+                    <li>7th: Re-instated art gallery; New badge on the about page.</li>
+                    <li>6th: Created new layout; Re-instated Web accessibility guide, free graphics, scans and about.</li>
                 </ul>
             </details>
         </article>
