--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <ul>
                     <li><a href="mailto:heckmaster@protonmail.com">E-mail</a> (best way to contact us)</li>
                     <li>Tumblr: <a href="https://heckmaster.tumblr.com/" target="_blank">@heckmaster</a> (reblog) + <a href="https://yourdevilfriends.tumblr.com/" target="_blank">@yourdevilfriends</a> (art)</li>
-                    <li>Mastodon: <a href="https://aethy.com/@yourdevilfriends" target="_blank">@yourdevilfriends@aethy.com</a></li>
+                    <li>Mastodon: <a href="https://blorbo.social/@yourdevilfriends" target="_blank">@yourdevilfriends@blorbo.social</a></li>
                     <li>MelonLand Forum: <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">@devils</a></li>
                     <li>Modern Neopets: <a href="https://www.moderneopets.com/userlookup/402" target="_blank">devils (#402)</a></li>
                     <li>Virtu.Pet: <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">devils</a>.</li>
