--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
             <p>Ramblings of madmen. Sometimes only one of us writes a particular post, in which case that will be specified.</p>
             <!--RANTS-->
             <details>
-                <summary>Rants</summary>
+                <summary>Rants & opinions</summary>
                 <p>None ATM, whoops.</p>
             </details>
             <!--REVIEWS-->
