--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
             <script type="text/javascript" src="https://teethinvitro.neocities.org/webring/linuxring/script/onionring-widget.js"></script>
         </div>
         <!--BAYANET-->
-        <a href="https://ochame.neocities.org/bayanet"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" id="bayanet"></a>          
+        <a href="https://ochame.neocities.org/bayanet"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" id="bayanet" style="margin-bottom: 18px;"></a>          
+        <!--PSSRING-->
+        <div>
+            <script src="https://ochame.neocities.org/ring/pssring.js"></script><webring-css style="display: block; max-width: 130px; margin: 2px auto;" site="https://yourdevilfriends.art/"></webring-css>
+        </div>
         <!--PALS-->
         <h3>Friends of the site</h3>
         <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/link-buttons/mortalsins.png" alt="mortalsins.neocities.org"></a>
