Minor changes (again)

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
         </div>
         <a href="http://dokode.moe/gamelounge/splatidol.html"><img src="http://dokodemo.neocities.org/gamelounge/splatoon/shiver.png" alt="Shiver" title="You're most like Shiver from Deep Cut!"></a>
         <!--BADGES-->
-        <h3><a href="https://ochame.neocities.org/badge" target="_blank">Badges</a></h3>
+        <h3>Badges by <a href="https://ochame.neocities.org/" target="_blank">ochame</a></h3>
         <img src="/images/decor/badges/404.png" alt="How did we get here...?">
         <img src="/images/decor/badges/64disk.png" alt="64 Disk Drives">
         <img src="/images/decor/badges/10thousand.png" alt="10 Thousand Fireflies">
