Webring fixed? Is it fixed?

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="https://ochame.neocities.org/bayanet"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" id="bayanet" style="margin-bottom: 18px;"></a>          
         <!--PSSRING-->
         <div>
-            <script src="https://ochame.neocities.org/ring/pssring.js"></script><webring-css style="display: block; max-width: 130px; margin: 2px auto;" site="https://yourdevilfriends.art/"></webring-css>
+            <script src="https://raw.githubusercontent.com/ochamena/pssring/main/pssring.js"></script><webring-css style="display: block; max-width: 130px; margin: 2px auto;" site="https://yourdevilfriends.art/"></webring-css>
         </div>
         <!--PALS-->
         <h3>Friends of the site</h3>
