--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
             <details>
                 <summary>Reviews</summary>
                 <ul>
-                    <li><a href="/blog/noodles.html">Reviews of instant noddles</a>; «My favorite page on yourdevilfriends.art is the one where devils go talk about instant noodles for way too long!» said no one ever.</li>
+                    <li><a href="/blog/noodles.html">Reviews of instant noddles</a>; «My favorite page on yourdevilfriends.art is the one where devils talk about instant noodles for way too long!» said no one ever.</li>
                 </ul>
             </details>
         </article>
