--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <!--BAYANET-->
         <a href="https://ochame.neocities.org/bayanet"><img src="/images/bayaid.png" id="bayanet" style="margin-bottom: 18px;"></a>          
         <!--PSSRING-->
-        <div>
+        <center>
             <script src="https://ochame.neocities.org/ring/pssring.js"></script><webring-css style="display: block; max-width: 130px; margin: 2px auto;" site="https://yourdevilfriends.art/"></webring-css>
-        </div>
+        </center>
         <!--PALS-->
         <h3>Friends of the site</h3>
         <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/link-buttons/mortalsins.png" alt="mortalsins.neocities.org"></a>
