--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,7 @@
               "thumbnailAlignment": "center",
               "thumbnailOpenImage": true
             }'>
+            <a href="https://images2.imgbox.com/98/dd/8cvaU7Fv_o.png" data-ngthumb="https://images2.imgbox.com/98/dd/8cvaU7Fv_o.png" data-ngdesc="A green anthropomorphic fox"></a>
             <a href="https://images2.imgbox.com/01/eb/TC1eYh8r_o.png" data-ngthumb="https://images2.imgbox.com/01/eb/TC1eYh8r_o.png" data-ngdesc="A human holding a book, looking annoyed"></a>
             <a href="https://images2.imgbox.com/50/ae/Fa0so9we_o.jpg" data-ngthumb="https://images2.imgbox.com/50/ae/Fa0so9we_o.jpg" data-ngdesc="A cat laying down under blankets with her tongue sticking out"></a>
             <a href="https://images2.imgbox.com/83/21/wjE2wbVW_o.gif" data-ngthumb="https://images2.imgbox.com/83/21/wjE2wbVW_o.gif" data-ngdesc="Animated icon featuring an anthropomorphic tapeworm"></a>
