--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
         <center>
             <script src="https://ochame.neocities.org/ring/pssring.js"></script><webring-css style="display: block; max-width: 130px; margin: 2px auto;" site="https://yourdevilfriends.art/">
         </center>
-        <!--PALS-->
-        <h3>Friends of the site</h3>
-        <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/link-buttons/mortalsins.png" alt="mortalsins.neocities.org"></a>
-        <a href="https://ochame.neocities.org/" target="_blank"><img src="/images/link-buttons/ochame.gif" alt="ochame.neocities.org"></a>
-        <br>
-        <a href="https://dokode.moe/" target="_blank"><img src="/images/link-buttons/dokodemo.gif" alt="dokode.moe"></a>
-        <a href="https://feelingmachine.moe/" target="_blank"><img src="/images/link-buttons/feelingmachine.gif" alt="feelingmachine.moe"></a>
+        <!--AHSC-->
+        <div id='ahsc' style="margin-left: -65px;">
+            <script type="text/javascript" src="https://feelingmachine.moe/alterring/onionring-variables.js"></script>
+            <script type="text/javascript" src="https://feelingmachine.moe/alterring/onionring-widget.js"></script>
+            <link rel="stylesheet" href="https://feelingmachine.moe/alterring/onionring.css">
+        </div>
     </aside>
 </body>
 </html>
