--- a/updates.html
+++ b/updates.html
@@ -25,6 +25,7 @@
             <details>
                 <summary>June 2023</summary>
                 <ul>
+                    <li>12th: Added Alterhuman Summoning Circle widget; New art.</li>
                     <li>11th: New art; Singular typo fix.</li>
                     <li>10th: Minor changes; Joined PSS Webring.</li>
                     <li>8th: Added friends' buttons to index page; Created blog; Added terms of use to freebies page; Minor changes to accessibility guide.</li>
