Nothing of value!

--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
             <h1>About devils</h1>
         </header>
         <article>
+            <!--INFO-->
             <figure style="float: right; margin-left: 5px; margin-right: 0; margin-bottom: 5px; width: 200px; text-align: center;">
                 <img src="/images/decor/picrew.png" alt="Picrew-generated image.">
                 <figcaption>We look like this! (<a href="https://picrew.me/ja/image_maker/1944831" target="_blank">credit</a>)</figcaption>
@@ -30,6 +31,15 @@
             <p>Besides maintaining this site, we spend a considerable amount of time drawing, playing video games and <a href="https://www.moderneopets.com/userlookup/402" target="_blank">feeding our Neopets</a>.</p>
             <p>We're very opinionated, though typically open-minded and open to discussion. If you're confused or upset by something we've said, feel free to reach out! We love hearing others' viewpoints- as long as you also want a productive conversation, that is.</p>
             <p>We're also pretty left in the political spectrum (we're not educated enough on the topic to properly label ourselves as anything other than «leftist», though), and very firmly against art censorship and bigotry. Additionally, we're schizophrenic and that can affect the way we communicate with others (namely a lack of coherency and a tendency to isolate).</p>
+            <!--FRIENDS-->
+            <h2>Pals of the site</h2>
+            <center>
+                <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/link-buttons/mortalsins.png" alt="Mortal Sins" title="Patrick ♥♥♥"></a>
+                <a href="https://ochame.neocities.org/" target="_blank"><img src="/images/link-buttons/ochame.gif" alt="Ochame" title="Nona"></a>
+                <a href="https://dokode.moe/" target="_blank"><img src="/images/link-buttons/dokodemo.gif" alt="DokoDemo" title="Suni"></a>
+                <a href="https://feelingmachine.moe/" target="_blank"><img src="/images/link-buttons/feelingmachine.gif" alt="Feeling Machine" title="Nephro"></a>
+            </center>
+            <!--CONTACTS-->
             <details>
                 <summary>Contact info & elsewhere</summary>
                 <ul>
@@ -46,6 +56,7 @@
     <!--ASIDE-->
     <aside>
         <!--QUIZ RESULTS-->
+        <!--WEB GUARDIAN QUIZ-->
         <div style="max-width: 270px; min-width: 270px;background-color: #fff;color: #000;display: block;padding: 10px;border: 1px solid;margin: auto;font-family: 'times';font-size: '15pt'; margin-bottom: 20px;">
             <p style="margin: 0">This page is protected by a</p>
             <h1 class="title" style="margin: 0">CAT</h1>
@@ -55,7 +66,14 @@
               <a href="https://hekate.neocities.org">Want your own? Visit hekate.neocities.org!</a>
             </small>
         </div>
+        <!--SPLATOON IDOL QUIZ-->
         <a href="http://dokode.moe/gamelounge/splatidol.html"><img src="http://dokodemo.neocities.org/gamelounge/splatoon/shiver.png" alt="Shiver" title="You're most like Shiver from Deep Cut!"></a>
+        <br><br>
+        <!--POKÉMON QUIZ-->
+        <a href="http://www.dragonflycave.com/quizzes/what-pokemon-are-you"><img src="http://www.dragonflycave.com/wpay/pikachu.gif" alt="I am a Pikachu!" title="Find out what Pokémon you are at The Cave of Dragonflies"></a>
+        <br><br>
+        <!--POKÉMON TYPE QUIZ-->
+        <a href="https://www.dragonflycave.com/quizzes/what-type-are-you/flying"><img src="https://www.dragonflycave.com/typequiz/flying.png" alt="Flying" title="I am a Flying-type!"></a>
         <!--BADGES-->
         <h3>Badges by <a href="https://ochame.neocities.org/" target="_blank">ochame</a></h3>
         <img src="/images/decor/badges/404.png" alt="How did we get here...?">
