--- a/blog.html
+++ b/blog.html
@@ -36,18 +36,9 @@
         </header>
         <article>
             <p>Ramblings of madmen. Sometimes only one of us writes a particular post, in which case that will be specified.</p>
-            <!--RANTS-->
-            <details>
-                <summary>Rants & opinions</summary>
-                <p>None ATM, whoops.</p>
-            </details>
-            <!--REVIEWS-->
-            <details>
-                <summary>Reviews</summary>
-                <ul>
-                    <li><a href="/blog/noodles.html">Reviews of instant noddles</a>; «My favorite page on yourdevilfriends.art is the one where devils talk about instant noodles for way too long!» said no one ever.</li>
-                </ul>
-            </details>
+            <ul>
+                <li><a href="/blog/noodles.html">Reviews of instant noddles</a>; «My favorite page on yourdevilfriends.art is the one where devils talk about instant noodles for way too long!» said no one ever. Last updated... when was it again?</li>
+            </ul>
         </article>
     </main>
     <!--STATUS.CAFE-->
