--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             <script type="text/javascript" src="https://feelingmachine.moe/alterring/onionring-widget.js"></script>
             <link rel="stylesheet" href="https://feelingmachine.moe/alterring/onionring.css">
         </div>
+        <!--SURF CLUB-->
+        <center>
+            <object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c061cb" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
+        </center>
     </aside>
 </body>
 </html>
