Changes that are so minor.

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
         padding: .5em;
         background-color: azure;
         border: 1px solid midnightblue;
+        color: midnightblue;
         max-width: 100%;
         }
         #statuscafe-username {
