--- a/updates.html
+++ b/updates.html
@@ -25,6 +25,8 @@
             <details>
                 <summary>June 2023</summary>
                 <ul>
+                    <li>16th: Minor changes;;</li>
+                    <li>15th: Added MelonLand Surf Club widget; Moved our friends' buttons the main section; Minor changes.</li>
                     <li>12th: Added Alterhuman Summoning Circle widget; New art.</li>
                     <li>11th: New art; Singular typo fix.</li>
                     <li>10th: Minor changes; Joined PSS Webring.</li>
