--- a/404.html
+++ b/404.html
@@ -2,31 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Whoops</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/universal.css">
+    <title>404 Not found</title>
+    <style>
+        body {
+            background-image: url(/images/backgrounds/kaboom.gif);
+        }
+    </style>
 </head>
 <body>
-    <!--NAVIGATION SIDEBAR-->
-    <nav>
-        <header></header>
-        <div id="sidebar">
-            <script type="text/javascript" src="/sidebar.js"></script>
-        </div>
-        <footer></footer>
-    </nav>
-    <!--MAIN CONTENT-->
     <main>
         <header>
-            <h1>404 not found</h1>
+            <a href="/"><img src="/images/headers/wiz.gif" alt="Header image"></a>
         </header>
-        <article>
-            <img src="/images/decor/kaboom.gif" alt="Animation of a computer exploding reading «I'm really glad computers don't do this anymore»">
-        </article>
+        <nav>
+            <a href="/about.html">About</a>
+            <a href="/art.html">Art</a>
+            <a href="/writing.html">Writing</a>
+            <a href="/misc.html">Misc.</a>
+            <a href="/credits.html">Site credits</a>
+        </nav>
     </main>
-    <!--ASIDE-->
-    <aside>
-        
-    </aside>
 </body>
 </html>
