--- a/about.html
+++ b/about.html
@@ -2,91 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/universal.css">
+    <link rel="stylesheet" href="/css/about.css">
     <title>About devils</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <!--NAVIGATION SIDEBAR-->
-    <nav>
-        <header></header>
-        <div id="sidebar">
-            <script type="text/javascript" src="/sidebar.js"></script>
-        </div>
-        <footer></footer>
-    </nav>
-    <!--MAIN CONTENT-->
     <main>
         <header>
-            <h1>About devils</h1>
+            <a href="/"><img src="/images/headers/microwave.gif" alt="Header image"></a>
         </header>
-        <article>
-            <!--INFO-->
-            <figure style="float: right; margin-left: 5px; margin-right: 0; margin-bottom: 5px; width: 200px; text-align: center;">
-                <img src="/images/decor/picrew.png" alt="Picrew-generated image.">
-                <figcaption>We look like this! (<a href="https://picrew.me/ja/image_maker/1944831" target="_blank">credit</a>)</figcaption>
+        <nav>
+            <a href="/about.html">About</a>
+            <a href="/art.html">Art</a>
+            <a href="/writing.html">Writing</a>
+            <a href="/misc.html">Misc.</a>
+            <a href="/credits.html">Site credits</a>
+        </nav>
+        <img src="/images/decor/cate.gif" class="rotate" style="margin-left: 10px; position: absolute;">
+        <article id="about">
+            <section id="self">
+                <p><span lang="pt">Olá!</span> This is devils speaking.</p>
+                <p>We're a 25 year-old <a href="https://morethanone.info/" target="_blank">system</a> from Portugal collectively known as devils (or Bruno, that works too). Only 2 of us run this website (Alastor and Angel) or use the Internet in general.</p>
+                <p>They/he. Arch BTW (well, EndeavourOS, but still).</p>
+                <h2 class="rainbow">Pals of the site</h2>
+                <center>
+                    <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/link-buttons/mortalsins.png" alt="Mortal Sins" title="Patrick <3"></a>
+                    <a href="https://ochame.neocities.org/" target="_blank"><img src="/images/link-buttons/ochame.gif" alt="Ochame" title="Nona"></a>
+                    <a href="https://dokode.moe" target="_blank"><img src="/images/link-buttons/dokodemo.gif" alt="DokoDemo" title="Suni"></a>
+                    <a href="https://feelingmachine.moe/" target="_blank"><img src="/images/link-buttons/feelingmachine.gif" alt="Feeeling Machine" title="Nephro"></a>
+                </center>
+            </section>
+            <figure>
+                <img src="/images/decor/picrew.png" alt="Picrew avatar" id="picrew">
+                <figcaption>What we look like · <a href="https://picrew.me/ja/image_maker/1944831" target="_blank">Picrew credit</a></figcaption>
             </figure>
-            <p>Heya, hiya, how are ya? Name's devils (or Bruno, if you'd prefer an actual name)- 25 year-old <a href="https://morethanone.info/" target="_blank">system</a> from Portugal, they/them or he/him.</p>
-            <p>The ones maintaining this site (and additionally the only ones who care about using the Internet) are <strong>Alastor</strong> and <strong>Angel</strong>.</p>
-            <p>Besides maintaining this site, we spend a considerable amount of time drawing, playing video games and <a href="https://www.moderneopets.com/userlookup/402" target="_blank">feeding our Neopets</a>.</p>
-            <p>We're very opinionated, though typically open-minded and open to discussion. If you're confused or upset by something we've said, feel free to reach out! We love hearing others' viewpoints- as long as you also want a productive conversation, that is.</p>
-            <p>We're also pretty left in the political spectrum (we're not educated enough on the topic to properly label ourselves as anything other than «leftist», though), and very firmly against art censorship and bigotry. Additionally, we're schizophrenic and that can affect the way we communicate with others (namely a lack of coherency and a tendency to isolate).</p>
-            <!--FRIENDS-->
-            <h2>Pals of the site</h2>
-            <center>
-                <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/link-buttons/mortalsins.png" alt="Mortal Sins" title="Patrick ♥♥♥"></a>
-                <a href="https://ochame.neocities.org/" target="_blank"><img src="/images/link-buttons/ochame.gif" alt="Ochame" title="Nona"></a>
-                <a href="https://dokode.moe/" target="_blank"><img src="/images/link-buttons/dokodemo.gif" alt="DokoDemo" title="Suni"></a>
-                <a href="https://feelingmachine.moe/" target="_blank"><img src="/images/link-buttons/feelingmachine.gif" alt="Feeling Machine" title="Nephro"></a>
-            </center>
-            <!--CONTACTS-->
-            <details>
-                <summary>Contact info & elsewhere</summary>
-                <ul>
-                    <li><a href="mailto:heckmaster@protonmail.com">E-mail</a> (best way to contact us)</li>
-                    <li>Tumblr: <a href="https://heckmaster.tumblr.com/" target="_blank">@heckmaster</a> (reblog) + <a href="https://yourdevilfriends.tumblr.com/" target="_blank">@yourdevilfriends</a> (art)</li>
-                    <li>Mastodon: <a href="https://blorbo.social/@yourdevilfriends" target="_blank">@yourdevilfriends@blorbo.social</a></li>
-                    <li>MelonLand Forum: <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">@devils</a></li>
-                    <li>Modern Neopets: <a href="https://www.moderneopets.com/userlookup/402" target="_blank">devils (#402)</a></li>
-                    <li>Virtu.Pet: <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">devils</a>.</li>
-                </ul>
-            </details>
+            <img src="/images/decor/webmaster.gif" style="position: absolute; margin-top: -55px; margin-left: 230px;">
         </article>
+        <article id="prefer">
+            <section class="box">
+                <h3>TV & movie delights</h3>
+                <p>Cartoons: <em>Hazbin Hotel</em>, Helluva Boss, Turning Red</p>
+                <p>Anime: <em>Satoshi Kon works</em>, Studio Ghibli works, Mob Psycho 100, Akira, <em>Tekkonkinkreet</em></p>
+                <p>Live-action: Oldboy... I don't watch many live-action movies</p>
+            </section>
+            <section class="box">
+                <h3>Video game delights</h3>
+                <p>Indie games: <em>Hypnospace Outlaw</em>, <em>Slayers X</em>, Tattletail, Baba Is You, RPGMaker games, Postal 2</p>
+                <p>Triple-A: <em>Nintendo games</em>, The Elder Scrolls series, Sonic series, Yo-kai Watch series, <em>Persona 5</em></p>
+            </section>
+            <img src="/images/decor/newslady.gif" class="rotate" style="position: absolute; margin-left: -325px; margin-top: 280px;">
+            <section class="box">
+                <h3>Literature delights</h3>
+                <p>Comic/manga authors: <em>Junji Ito</em>, <em>Inio Asano</em>, <span lang="pt">Mariana Pita</span></p>
+                <p>Poets: <em lang="pt">Fernando Pessoa</em>, Edgar Allan Poe</p>
+                <p>Individual books: <em>Bizarre Stories</em> by Olga Tokarczuk, <em>No Longer Human</em> by Osamu Dazai</p>
+            </section>
+            <section class="box">
+                <h3>Miscellaneous delights</h3>
+                <p><em>Art of all kinds</em>, entomology, collecting pins, <em>HTML/CSS</em> (duh), mental health, <em>Internet history and oddities</em>, philosophy, D&D, <em>Halley Labs</em>, <em>Everything Everything</em>...</p>
+                <p>... and probably a ton of other stuff too</p>
+            </section>
+            <a href="mailto:heckmaster@protonmail.com"><img src="/images/decor/email.gif" alt="Send us an e-mail" style="position: absolute; margin-top: -50px; margin-left: -40px;">
+        </article>
+        <a href="https://ochame.neocities.org/bayanet/" target="_blank"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" alt="BayaNet ID" class="center"></a>
     </main>
-    <!--ASIDE-->
-    <aside>
-        <!--QUIZ RESULTS-->
-        <!--WEB GUARDIAN QUIZ-->
-        <div style="max-width: 270px; min-width: 270px;background-color: #fff;color: #000;display: block;padding: 10px;border: 1px solid;margin: auto;font-family: 'times';font-size: '15pt'; margin-bottom: 20px;">
-            <p style="margin: 0">This page is protected by a</p>
-            <h1 class="title" style="margin: 0">CAT</h1>
-            <img class="image" style="max-width: 160px;border: 1px solid" alt="CAT" src="https://i.ibb.co/Bc2KW7v/cat.jpg">
-            <p class="description">Cats are believed to be the only mammals who don't taste sweetness.</p>
-            <small>
-              <a href="https://hekate.neocities.org">Want your own? Visit hekate.neocities.org!</a>
-            </small>
-        </div>
-        <!--SPLATOON IDOL QUIZ-->
-        <a href="http://dokode.moe/gamelounge/splatidol.html"><img src="http://dokodemo.neocities.org/gamelounge/splatoon/shiver.png" alt="Shiver" title="You're most like Shiver from Deep Cut!"></a>
-        <br><br>
-        <!--POKÉMON QUIZ-->
-        <a href="http://www.dragonflycave.com/quizzes/what-pokemon-are-you"><img src="http://www.dragonflycave.com/wpay/pikachu.gif" alt="I am a Pikachu!" title="Find out what Pokémon you are at The Cave of Dragonflies"></a>
-        <br><br>
-        <!--POKÉMON TYPE QUIZ-->
-        <a href="https://www.dragonflycave.com/quizzes/what-type-are-you/flying"><img src="https://www.dragonflycave.com/typequiz/flying.png" alt="Flying" title="I am a Flying-type!"></a>
-        <!--BADGES-->
-        <h3>Badges by <a href="https://ochame.neocities.org/" target="_blank">ochame</a></h3>
-        <img src="/images/decor/badges/404.png" alt="How did we get here...?">
-        <img src="/images/decor/badges/64disk.png" alt="64 Disk Drives">
-        <img src="/images/decor/badges/10thousand.png" alt="10 Thousand Fireflies">
-        <img src="/images/decor/badges/scaperune.png" alt="Badgelike Thing">
-        <img src="/images/decor/badges/bond.png" alt="Membership Badge">
-        <img src="/images/decor/badges/fenne.png" alt="Celebrate 10 years of Kalos with Fennekin!">
-        <img src="/images/decor/badges/pride.png" alt="Under the Arch">
-        <img src="/images/decor/badges/aro.png" alt="Oh So Aromatic!">
-        <img src="/images/decor/badges/trans.png" alt="Tea Kitten">
-        <img src="/images/decor/badges/yarr.png" alt="Arr me matey!">
-        <img src="/images/decor/badges/20thousans.png" alt="Neopolis Planet - 20000km">
-    </aside>
 </body>
 </html>
