--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/universal.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>404 Not found</title>
     <style>
         body {
