--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/universal.css">
     <link rel="stylesheet" href="/css/about.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>About devils</title>
 </head>
 <body>
