--- a/art.html
+++ b/art.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/universal.css">
     <link rel="stylesheet" href="/css/art.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>Art</title>
 </head>
 <body>
