--- a/credits.html
+++ b/credits.html
@@ -21,6 +21,7 @@
         </nav>
         <article>
             <h1>Site credits</h1>
+            <h2>Graphics</h2>
             <p>Official Nekojiru art (<a href="/images/headers/nekojiru.png">1</a>)</p>
             <p>Official Cat Partners: Maruru And Hachi art (<a href="/images/backgrounds/nekos.jpg">1</a>)</p>
             <p>Official Yoshi's Island art (<a href="/images/backgrounds/foliage.png">1</a>)</p>
@@ -31,6 +32,11 @@
             <p><a href="http://diabellalovescats.com/graphics.htm" target="_blank">Diabella's Vintage Cat Graphics</a> (<a href="/images/headers/magical.gif">1</a>) (<a href="/images/headers/soul.jpg">2</a>)</p>
             <p>Official Mob Psycho 100 art (<a href="/images/headers/despair.jpg">1</a>)</p>
             <p>Official Katamari Damacy art (<a href="/images/backgrounds/katamari.jpg">1</a>)</p>
+            <p>Official Scott Pilgrim art (<a href="/images/headers/economy.jpg">1</a>)</p>
+            <p>Official Pokémon art (<a href="/images/headers/garbo.png">1</a>) (<a href="/images/decor/chu.png">2</a>)</p>
+            <h2>Code snippets</h2>
+            <a href="https://solaria.neocities.org/" target="_blank">Solaria's Webspace</a> (rainbow text code)
+            <a href="https://obby.dog/" target="_blank">Vertpush</a> (falling images code)
         </article>
     </main>
 </body>
