--- a/illus3.html
+++ b/illus3.html
@@ -15,7 +15,7 @@
 <body>
     <aside>
         <header>
-            <a href="/"><img src="/images/headers/despair.jpg" alt=""></a>
+            <a href="/"><img src="/images/headers/despair.jpg" alt="Header image"></a>
         </header>
         <nav>
             <a href="/about.html">About</a>
@@ -83,6 +83,8 @@
         <a href="/images/art/illus3/2023-tattletail.png"><img src="/images/art/illus3/2023-tattletail.png"></a>
         <!---->
         <a href="/images/art/illus3/2023-kuyata.png"><img src="/images/art/illus3/2023-kuyata.png"></a>
+        <!---->
+        <a href="/images/art/illus3/2023-forever.jpg"><img src="/images/art/illus3/2023-forever.jpg"></a>
         <!---->
         <a href="/images/art/illus3/2023-kiss.png"><img src="/images/art/illus3/2023-kiss.png"></a>
         <!---->
