--- a/credits.html
+++ b/credits.html
@@ -35,8 +35,8 @@
             <p>Official Scott Pilgrim art (<a href="/images/headers/economy.jpg">1</a>)</p>
             <p>Official Pokémon art (<a href="/images/headers/garbo.png">1</a>) (<a href="/images/decor/chu.png">2</a>)</p>
             <h2>Code snippets</h2>
-            <a href="https://solaria.neocities.org/" target="_blank">Solaria's Webspace</a> (rainbow text code)
-            <a href="https://obby.dog/" target="_blank">Vertpush</a> (falling images code)
+            <p><a href="https://solaria.neocities.org/" target="_blank">Solaria's Webspace</a> (rainbow text code)</p>
+            <p><a href="https://obby.dog/" target="_blank">Vertpush</a> (falling images code)</p>
         </article>
     </main>
 </body>
